# ally

./: .env.example  .gitignore  README.md  install.sh  main.py  pyproject.toml  uninstall.sh
ally/: agent.py  cli.py  config.py  mcp_builtin.py  mcp_client.py  setup.py  tools.py
